--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=SYSTEM
+spring.datasource.username=datadb
 spring.datasource.password=admin
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
