--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,16 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
