--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.jackson.deserialization.fail-on-unknown-properties=true  
